[package]
name = "ukato"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0", features = ["derive"] }
console = "0.15.7"
dialoguer = "0.11.0"
confy = "0.5.1"
serde = "1.0.193"
serde_derive = "1.0.193"
dirs = "5.0.1"
aurelius = "0.7.5"
inlyne = "0.4.2"
chrono = "0.4.37"
